linuxmuster-linbo (2.3.8-0) babo62; urgency=low

  * added and fixed several example files.
  * fixed security query for ntfsresize (closes #622).
  * reverted useless postsync download fix.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 30 Aug 2016 15:39:20 +0200

linuxmuster-linbo (2.3.7-0) babo62; urgency=low

  * removed hostname sanitation in busyboxes udhcpc (closes #621).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 25 Aug 2016 11:07:43 +0200

linuxmuster-linbo (2.3.6-1) babo62; urgency=low

  * rebuild with fixed kernel config.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 05 Aug 2016 13:27:09 +0200

linuxmuster-linbo (2.3.6-0) babo62; urgency=low

  * Kernel:
    - added more usb host and network drivers.
    - optimized powermanagement configuration.
  * linbo_cmd.sh:
    - fixed boot sector backup and restore for windows 10 uefi systems.
    - removed german umlauts.
  * fixed missing linbo_wallpaper.png link in /var/linbo/icons.
  * remove unifont from grub configuration.
  * reworked make-linbo-iso.sh, fixed bios cdrom compatibility hopefully.
  * moved isolinux/syslinux dependencies from build depends to package depends.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 05 Aug 2016 12:29:12 +0200

linuxmuster-linbo (2.3.5-0) babo62; urgency=low

  * iso boot media creation: fixed usb boot support (#611).
  * kernel update to 4.4.16.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 01 Aug 2016 22:19:17 +0200

linuxmuster-linbo (2.3.4-0) babo62; urgency=low

  * linbo_cmd.sh
    - upload(): added postsync to uploadable file extensions.
    - update(): improved linbo md5 download check.
    - do_opsi(): save opsi host key for offline use in cache.
    - prepare_fs(), syncl(): save and restore more bytes of windows mbr.
    - syncl(): fixed hostname in offline mode (closes #616).
  * init.sh: improved net interface recognition (closes #617).
  * linbofs: added several utils needed by udev.
  * removed umlauts from start.conf examples.