@@ -1,1 +1,1 @@
-LINBO 2.3.8-0
+LINBO 2.3.9-0
